<resources>
    <string name="app_name">HelloWorld</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="name">Name</string>
    <string name="mob">Mobile Number</string>
    <string name="pwd">Password</string>
    <string name="cpwd">Confirm Password</string>
    <string name="forgot_pwd">Forgot Password?</string>
    <string name="login">Login</string>
    <string name="reg">Register</string>

    <string name="sendOtp">OTP</string>
    <string name="verify">Verify</string>

    <string name="back_button">Back Button</string>
    <string name="edit_button">Edit Button</string>
    <string name="add_image">Add Image</string>

    <string name="menu_chats">Chats</string>
    <string name="menu_contacts">Contacts</string>
    <string name="menu_about_helloworld">About HelloWorld</string>
    <string name="menu_logout">Logout</string>

    <string name="user_profile_img">User Profile Image</string>
    <string name="no_chats_msg">No Chats to show!</string>
    <string name="no_chats_info">Tap the menu button to view Contacts and for more options.</string>

    <string name="messenger">HelloWorld Messenger</string>
    <string name="developer">Developed by: Ayushkumar Maurya</string>
    <string name="about_info1">
        1. HelloWorld Messenger helps you connect with your closed ones and business acquaintances.\n
        2. It is an efficient and easy-to-use Android Chat application.\n
        3. This application is created using Java for Android app and PHP, MySQL for the server.\n
        4. Firebase Authentication is used to verify phone number.\n
        5. User will be able to login simultaneously on multiple Android devices.\n
        6. Since, all the files &amp; chats of the user is stored in server, user do not have to worry about taking backups.
    </string>
    <string name="about_info2">GitHub Repositories Links:</string>
    <string name="about_info3">
        1. https://github.com/ayushskmaurya/HelloWorld-Messenger\n
        2. https://github.com/ayushskmaurya/HelloWorld-Server
    </string>

    <string name="attached_file">Attached File</string>
    <string name="cancel_uploading_file">Cancel Uploading File</string>
    <string name="download_file">Download File</string>
    <string name="read_receipt_sending">Sending</string>
    <string name="read_receipt_sent">Sent</string>
    <string name="read_receipt_seen">Seen</string>
    <string name="message">Message</string>
    <string name="attach_file">Attach File</string>
    <string name="send_message">Send Message</string>

    <string name="caption">Caption</string>
    <string name="send_file">Send File</string>
</resources>