<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".ui.about_helloworld.AboutHelloworldFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/logo_fragmentAboutHelloworld"
            android:layout_width="170dp"
            android:layout_height="170dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:layout_weight="0"
            android:contentDescription="@string/app_name"
            android:src="@drawable/logo" />

        <TextView
            android:id="@+id/appName_fragmentAboutHelloworld"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_weight="0"
            android:background="@color/white"
            android:paddingStart="5dp"
            android:paddingEnd="5dp"
            android:paddingBottom="7dp"
            android:text="@string/messenger"
            android:textColor="@color/color1"
            android:textSize="24sp"
            android:textStyle="bold" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="5dp">

                <TextView
                    android:id="@+id/info1_fragmentAboutHelloworld"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/about_info1"
                    android:textColor="@color/color1"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/info2_fragmentAboutHelloworld"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="7dp"
                    android:text="@string/about_info2"
                    android:textColor="@color/color1"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/info3_fragmentAboutHelloworld"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/about_info3"
                    android:textColor="@color/color1"
                    android:textSize="16sp" />
            </LinearLayout>
        </ScrollView>

        <TextView
            android:id="@+id/developer_fragmentAboutHelloworld"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_weight="0"
            android:background="@color/white"
            android:paddingStart="5dp"
            android:paddingTop="7dp"
            android:paddingEnd="5dp"
            android:paddingBottom="15dp"
            android:text="@string/developer"
            android:textColor="@color/black3"
            android:textSize="18sp"
            android:textStyle="bold" />
    </LinearLayout>

</FrameLayout>