<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".activities.LoginActivity">

    <LinearLayout
        android:id="@+id/loginLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="vertical"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        app:layout_constraintBottom_toTopOf="@+id/reg_activityLogin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/logo_activityLogin"
            android:layout_width="170dp"
            android:layout_height="170dp"
            android:layout_gravity="center_horizontal"
            android:contentDescription="@string/app_name"
            app:srcCompat="@drawable/logo" />

        <EditText
            android:id="@+id/mob_activityLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:background="@drawable/input_fields_bg"
            android:ems="10"
            android:hint="@string/mob"
            android:importantForAutofill="no"
            android:inputType="phone"
            android:maxLength="10"
            android:padding="7dp"
            android:textColor="@color/black"
            android:textColorHint="@color/black1"
            android:textCursorDrawable="@drawable/cursor_color" />

        <EditText
            android:id="@+id/pwd_activityLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/input_fields_bg"
            android:ems="10"
            android:hint="@string/pwd"
            android:importantForAutofill="no"
            android:inputType="textPassword"
            android:padding="7dp"
            android:textColor="@color/black"
            android:textColorHint="@color/black1"
            android:textCursorDrawable="@drawable/cursor_color" />

        <Button
            android:id="@+id/login_activityLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:backgroundTint="@color/grey1"
            android:padding="7dp"
            android:text="@string/login"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:textSize="18sp" />
    </LinearLayout>

    <Button
        android:id="@+id/reg_activityLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:padding="7dp"
        android:text="@string/reg"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>