<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".RegisterActivity">

    <ImageView
        android:id="@+id/logo_activityRegister"
        android:layout_width="170dp"
        android:layout_height="170dp"
        android:layout_marginTop="70dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo"
        android:contentDescription="@string/app_name" />

    <LinearLayout
        android:id="@+id/registerLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:background="@color/white"
        android:orientation="vertical"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logo_activityRegister">

        <EditText
            android:id="@+id/name_activityRegister"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/login_input_fields_bg"
            android:ems="10"
            android:hint="@string/name"
            android:inputType="text"
            android:padding="7dp"
            android:textColor="@color/black"
            android:textColorHint="@color/black1"
            android:textCursorDrawable="@drawable/cursor_color"
            android:textSize="18sp"
            android:importantForAutofill="no" />

        <EditText
            android:id="@+id/mob_activityRegister"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/login_input_fields_bg"
            android:ems="10"
            android:hint="@string/mob"
            android:importantForAutofill="no"
            android:inputType="phone"
            android:maxLength="10"
            android:padding="7dp"
            android:textColor="@color/black"
            android:textColorHint="@color/black1"
            android:textCursorDrawable="@drawable/cursor_color"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/pwd_activityRegister"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/login_input_fields_bg"
            android:ems="10"
            android:hint="@string/pwd"
            android:inputType="textPassword"
            android:padding="7dp"
            android:textColor="@color/black"
            android:textColorHint="@color/black1"
            android:textCursorDrawable="@drawable/cursor_color"
            android:textSize="18sp"
            android:importantForAutofill="no" />

        <EditText
            android:id="@+id/cpwd_activityRegister"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/login_input_fields_bg"
            android:ems="10"
            android:hint="@string/cpwd"
            android:inputType="textPassword"
            android:padding="7dp"
            android:textColor="@color/black"
            android:textColorHint="@color/black1"
            android:textCursorDrawable="@drawable/cursor_color"
            android:textSize="18sp"
            android:importantForAutofill="no" />

    </LinearLayout>

    <Button
        android:id="@+id/reg_activityRegister"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:backgroundTint="@color/color1"
        android:padding="7dp"
        android:text="@string/reg"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/registerLayout" />
</androidx.constraintlayout.widget.ConstraintLayout>