<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="50dp"
    android:layout_marginTop="5dp"
    android:layout_marginEnd="5dp"
    android:layout_marginBottom="5dp"
    android:background="@color/white">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_message_sent"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:background="@drawable/bg_attachment_sent">

            <ImageView
                android:id="@+id/file_rowItemAttachmentSent"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:contentDescription="@string/attached_file"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/icon_attached_file" />

            <ProgressBar
                android:id="@+id/progressBar_rowItemAttachmentSent"
                style="?android:attr/progressBarStyle"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:indeterminate="true"
                android:indeterminateTint="@color/white"
                android:indeterminateTintMode="src_atop"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="@+id/file_rowItemAttachmentSent"
                app:layout_constraintEnd_toEndOf="@+id/file_rowItemAttachmentSent"
                app:layout_constraintStart_toStartOf="@+id/file_rowItemAttachmentSent"
                app:layout_constraintTop_toTopOf="@+id/file_rowItemAttachmentSent" />

            <ImageView
                android:id="@+id/cancel_rowItemAttachmentSent"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:contentDescription="@string/cancel_uploading_file"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="@+id/file_rowItemAttachmentSent"
                app:layout_constraintEnd_toEndOf="@+id/file_rowItemAttachmentSent"
                app:layout_constraintStart_toStartOf="@+id/file_rowItemAttachmentSent"
                app:layout_constraintTop_toTopOf="@+id/file_rowItemAttachmentSent"
                app:srcCompat="@drawable/icon_cancel_uploading_file" />

            <ImageView
                android:id="@+id/download_rowItemAttachmentSent"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:contentDescription="@string/download_file"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="@+id/file_rowItemAttachmentSent"
                app:layout_constraintEnd_toEndOf="@+id/file_rowItemAttachmentSent"
                app:layout_constraintStart_toStartOf="@+id/file_rowItemAttachmentSent"
                app:layout_constraintTop_toTopOf="@+id/file_rowItemAttachmentSent"
                app:srcCompat="@drawable/icon_download_file" />

            <TextView
                android:id="@+id/filename_rowItemAttachmentSent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="50dp"
                android:layout_marginEnd="5dp"
                android:ellipsize="end"
                android:maxLines="1"
                android:textColor="@color/white"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/caption_rowItemAttachmentSent"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="5dp"
                android:textColor="@color/white"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/time_rowItemAttachmentSent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:paddingStart="2dp"
                android:paddingEnd="1dp"
                android:textColor="@color/grey4"
                android:textSize="12sp" />

            <ImageView
                android:id="@+id/readReceiptSending_rowItemAttachmentSent"
                android:layout_width="18sp"
                android:layout_height="18sp"
                android:layout_gravity="bottom"
                android:contentDescription="@string/read_receipt_sending"
                android:paddingStart="1dp"
                android:paddingEnd="5dp"
                android:visibility="gone"
                app:srcCompat="@drawable/icon_read_receipt_sending" />

            <ImageView
                android:id="@+id/readReceiptSent_rowItemAttachmentSent"
                android:layout_width="18sp"
                android:layout_height="18sp"
                android:layout_gravity="bottom"
                android:contentDescription="@string/read_receipt_sent"
                android:paddingStart="1dp"
                android:paddingEnd="5dp"
                android:visibility="gone"
                app:srcCompat="@drawable/icon_read_receipt_sent" />

            <ImageView
                android:id="@+id/readReceiptSeen_rowItemAttachmentSent"
                android:layout_width="18sp"
                android:layout_height="18sp"
                android:layout_gravity="bottom"
                android:contentDescription="@string/read_receipt_seen"
                android:paddingStart="1dp"
                android:paddingEnd="5dp"
                android:visibility="gone"
                app:srcCompat="@drawable/icon_read_receipt_seen" />
        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>