<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".activities.AttachFileActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/file_activityAttachFile"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_gravity="center_horizontal"
            android:background="@color/white"
            app:srcCompat="@drawable/icon_attached_file"
            android:contentDescription="@string/attached_file" />

        <TextView
            android:id="@+id/filename_activityAttachFile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:ellipsize="end"
            android:gravity="center_horizontal"
            android:maxLines="1"
            android:paddingStart="5dp"
            android:paddingEnd="5dp"
            android:textColor="@color/black"
            android:textSize="20sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="horizontal"
        android:padding="5dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <EditText
            android:id="@+id/caption_activityAttachFile"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/bg_input_fields"
            android:ems="10"
            android:gravity="center_vertical"
            android:hint="@string/caption"
            android:importantForAutofill="no"
            android:inputType="textMultiLine"
            android:minHeight="40dp"
            android:padding="5dp"
            android:textColor="@color/black"
            android:textColorHint="@color/black1"
            android:textCursorDrawable="@drawable/cursor_color" />

        <ImageButton
            android:id="@+id/sendFile_activityAttachFile"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_gravity="bottom"
            android:layout_marginStart="5dp"
            android:background="@drawable/bg_send_message"
            android:contentDescription="@string/send_file"
            android:scaleType="center"
            app:srcCompat="@drawable/icon_send_message" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>